syntax = "proto3";

package document.intelligence.v1.service;

option go_package = "ztp/proto/services/document/intelligence";

service DocumentIntelligenceService {
  rpc ClassifyDocument(ClassifyDocumentRequest) returns (ClassifyDocumentResponse);
  rpc DetectDocumentText(DetectDocumentTextRequest) returns (DetectDocumentTextResponse);
}

// service Backend {
//   rpc ResumeClassification() returns ();
//   rpc ResumeTextDetection() returns ();
// }

message ClassifyDocumentRequest {
}

message ClassifyDocumentResponse {
}

message DetectDocumentTextRequest {
}

message DetectDocumentTextResponse {
}

enum DocumentType {
  DOCUMENT_TYPE_UNSPECIFIED = 0;
  DOCUMENT_TYPE_INVOICE = 1;
}

message ResumeClassificationRequest {
  string document_id = 1;
}
